feat: v1.2.0 Hybrid Architecture Release
- Policy-aware QA system with vendor-specific content classification
- Hybrid architecture: vendor-neutral core + vendor appendix
- 5 Claude-specific blueprints integrated (265KB vendor content)
- Comprehensive documentation updates for hybrid approach
- New baseline: 8d4125c5 (291KB, 4,941 lines)
- Quality gates maintained with vendor-aware validation
- Updated README, STATUS, TASKS, and DECISIONS documentation

Major architectural achievement: demonstrates successful integration
of vendor-specific examples while preserving universal patterns.

--- a/build.manifest.json
+++ b/build.manifest.json
@@ -4,8 +4,14 @@
     "core/00-router.md",
     "core/01-risks.md",
     "core/02-devcontainer.md",
+    "core/90-appendix-vendors.md",
     "blueprints/adaptive-learning.md",
     "blueprints/cicd-analyst.md",
+    "blueprints/claude-agents.md",
+    "blueprints/claude-ai-coding-guide-md.md",
+    "blueprints/claude-code-bible.md",
+    "blueprints/code-assistant.md",
+    "blueprints/deployment-agent.md",
     "blueprints/documenter.md",
     "blueprints/guardian.md",
     "blueprints/janitor.md",
