fix: correct manifest_guard.py path in CI workflow
- Changed scripts/manifest_guard.py → scripts/tools/manifest_guard.py
- Added required --manifest and --root arguments
- Fixes 'No such file or directory' error in qa job

--- a/.github/workflows/docsyn-ci.yml
+++ b/.github/workflows/docsyn-ci.yml
@@ -61,7 +61,7 @@ jobs:
         run: pip install -r requirements.txt || true
 
       - name: Manifest guard (fails on broken manifest)
-        run: python3 scripts/manifest_guard.py
+        run: python3 scripts/tools/manifest_guard.py --manifest build.manifest.json --root .
 
       - name: Rebuild to verify determinism (same steps as build)
         run: make docsyn
