--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,9 @@ jobs:
           python-version: '3.11'
 
       - name: Install deps
-        run: pip install -r requirements.txt || true
+        run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Build (deterministic)
         run: make docsyn
