--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 # DocSyn Python Dependencies
-# All scripts use standard library modules only  
-# This file exists for GitHub Actions compatibility
+# Required for QA build script (qa_build.py)
+PyYAML>=6.0
