--- a/.github/workflows/docsyn-ci.yml
+++ b/.github/workflows/docsyn-ci.yml
@@ -25,10 +25,9 @@ jobs:
         with:
           python-version: '3.11'
 
-      # Install required Python dependencies
       - name: Install Python deps
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Build (deterministic)
@@ -61,7 +60,7 @@ jobs:
 
       - name: Install Python deps
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Manifest guard (fails on broken manifest)
