--- a/.github/workflows/nightly-qa.yml
+++ b/.github/workflows/nightly-qa.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install deps
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Build & QA
