--- a/.github/workflows/docsyn-ci.yml
+++ b/.github/workflows/docsyn-ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r scripts/requirements.txt
 
       - name: Build (deterministic)
         run: make docsyn
@@ -61,7 +61,7 @@ jobs:
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r scripts/requirements.txt
 
       - name: Manifest guard (fails on broken manifest)
         run: python3 scripts/tools/manifest_guard.py --manifest build.manifest.json --root .
